# docs/swagger.yaml
@@ -1,6 +1,14 @@
 definitions:
   errcode.Error:
     type: object
+  gorm.DeletedAt:
+    properties:
+      time:
+        type: string
+      valid:
+        description: Valid is true if Time is not NULL
+        type: boolean
+    type: object
   models.ResponseHTTP:
     properties:
       code:
@@ -11,16 +19,103 @@ definitions:
       success:
         type: boolean
     type: object
+  models.User:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      password:
+        type: string
+      updatedAt:
+        type: string
+      userName:
+        type: string
+    required:
+    - password
+    - userName
+    type: object
   models.UserSwagger:
     properties:
       password:
         type: string
       userName:
         type: string
+    required:
+    - password
+    - userName
     type: object
 info:
   contact: {}
 paths:
+  /api/v1/user:
+    get:
+      consumes:
+      - application/json
+      description: 获取所有用户
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseHTTP'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.User'
+                  type: array
+              type: object
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取所有用户
+      tags:
+      - user
+  /api/v1/user/{id}:
+    get:
+      consumes:
+      - application/json
+      description: 根据id获取用户详情
+      parameters:
+      - description: 用户id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseHTTP'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.User'
+                  type: array
+              type: object
+        "404":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "503":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 根据id获取用户详情
+      tags:
+      - user
   /api/v1/user/register:
     post:
       consumes:
